--- a/package.json
+++ b/package.json
@@ -2,5 +2,14 @@
   "name": "orchis-nozoki",
   "description": "Orchisで読み込めなくなった設定ファイルをのぞき見するツール",
   "author": "aznhe21 <aznhe21.mc@gmail.com>",
-  "license": "GPL-3.0-or-later"
+  "license": "GPL-3.0-or-later",
+  "scripts": {
+    "check": "tsc --noEmit && rome check .",
+    "build": "tsc",
+    "build-watch": "tsc --watch"
+  },
+  "devDependencies": {
+    "rome": "^11.0.0",
+    "typescript": "^4.9.4"
+  }
 }
